--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
+./**/__pycache__/
+runs/
 .idea/
-*.pyc
+.ipynb_checkpoints
+*.zip
+*.jpg
+*.dat
+checkpoint*
+*.bz2
+*.pt
+*.tar.gz
+*.pdf
+*.rec
+results_test/
+results/
+.vscode/
+./**/*.pyc
+exp
+src/tools/annotations/
+src/models/
