--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-./**/__pycache__/
+**/__pycache__/
 runs/
 .idea/
 .ipynb_checkpoints
@@ -14,7 +14,7 @@ checkpoint*
 results_test/
 results/
 .vscode/
-./**/*.pyc
+**/*.pyc
 exp
 src/tools/annotations/
 src/models/
